# ArchBank

./: .gitignore  BANKS.yaml  P-Code.md  RECORDS.yaml  XTRAKT.md  pyproject.toml
bank/Capstone-Arch/RISCV/: RISCVMapping.c
bank/XED-DataFiles/avx10-2/: avx10-2-element-widths.txt
bank/XED-DataFiles/future/: future-chips.txt
bank/Zydis-Metadata/: DecoderTables.inc
bank/x86-Dataset/: CMakeLists.txt  LICENSE  README.md
bank/x86-Dataset/include/: x86.h
bank/x86-Dataset/scripts/: demo.sh  x86-tablegen.py
bank/x86-Dataset/tests/: llvm_dump.c  x86_001.c  x86_002.c  x86_004.c  x86_006.c  x86_dump.c  x86_fuzzer.c  x86_opcodes.c
instr-sources/Capstone-Arch/M68K/: M68KInstPrinter.c
resorvoir/Zydis-Metadata/: InstructionDefinitions.inc
resorvoir/x86-Dataset/lib/: x86.c
resorvoir/x86-Dataset/tests/: llvm_dumppp.cpp  x86_005.c  x86_bench.c
tests/: __init__.py  conftest.py  test_cir.py  test_parsers.py  test_umdes.py
umdes/specs/: aarch64.umdesc  arm-a32.umdesc  hexagon.umdesc  m68k.umdesc  mos6502.umdesc  riscv.umdesc  sparc.umdesc
umdesc/: __init__.py  ast_nodes.py  lexer.py  parser.py  uMDesc.md  visitor.py
umdesc/specs/: mips.umdesc  powerpc.umdesc  s390.umdesc  tricore.umdesc  wasm.umdesc  x86-64.umdesc
xtrakt/: __init__.py  cir.py  cli.py  config.py  manifest.py  normalize.py  pipeline.py  schema.py
xtrakt/parsers/: __init__.py  asmjit_json.py  base.py  common.py  courtier_json.py  ctable.py  hotspot_adl.py  metadata_only.py  nasm_data.py  riscv_opcodes.py  smlnj_targets.py  source_scan.py  spec_only.py  tablegen.py  wabt_wasm.py  x86_dataset.py  xmlreference_x86.py
xtrakt/pcode/: __init__.py  decoder.py  emitter.py  sexpr.py
xtrakt/pcode/transcoders/: __init__.py  _common.py  dag.py  mspec.py  rtl.py  sleigh.py  ssl.py  tcg.py
xtrakt/storage/: base.py  bson.py  json.py  sqlite.py  xml.py  yaml.py
