[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xtrakt"
version = "1.0.0"
description = "Declarative extraction-and-storage pipeline for the ArchBank CIR."
readme = "XTRAKT.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["PyYAML>=5.4"]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
xtrakt = "xtrakt.cli:main"

[tool.setuptools.packages.find]
include = ["xtrakt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
